--- a/patrickvarin_2012_11_14/index.html
+++ b/patrickvarin_2012_11_14/index.html
@@ -5,6 +5,7 @@
 <meta name="description" content="Patrick Varin's homepage, portfolio and resume" />
 <link rel="stylesheet" type="text/css" href="styles/main.css" />
 <title>Patrick Varin - Homepage</title>
+<script src="scripts/jquery-1.8.3.min.js" type="text/javascript"></script>
 <script src="scripts/navigation.js" type="text/javascript"></script>
 <script src="scripts/gridItemOverlay.js" type="text/javascript"></script>
 <script src="scripts/format.js" type="text/javascript"></script>
@@ -20,7 +21,7 @@
 	})();
 </script>
 </head>
-<body onload="format()">
+<body>
 	<div id="wrapper">
 		<div id="header">
 			<ul id="navbar">
@@ -67,35 +68,35 @@
 			<div id="grid" class="content-wrapper-hidden">
 				<div id="projects" class="content-grid-wrapper-visible">
 					<div>
-						<div class="grid-item-overlay-hidden">
+						<div class="grid-item-overlay">
 							<h3>Task Master</h3>
 							<p>Design for a social, geo-aware, task managing application</p>
 						</div>
 						<img src="assets/TaskMaster_thumb.png"/>
 					</div>
 					<div>
-						<div class="grid-item-overlay-hidden">
+						<div class="grid-item-overlay">
 							<h3>Artificial Intelligence</h3>
 							<p>Teaching and training Pac-Man to win his own game.</p>
 						</div>
 						<img src="assets/Pacman_thumb.png"/>
 					</div>
 					<div>
-						<div class="grid-item-overlay-hidden">
+						<div class="grid-item-overlay">
 							<h3>Dynamical Systems</h3>
 							<p>Four projects studying different systems in non-linear dynamics and chaos.</p>
 						</div>
 						<img src="assets/Chaos_thumb.png"/>
 					</div>
 					<div>
-						<div class="grid-item-overlay-hidden">
+						<div class="grid-item-overlay">
 							<h3>Wave Simulation</h3>
 							<p>A study and simulation of the Shallow Water Equations</p>
 						</div>
 						<img src="assets/Waterwave_thumb.png"/>
 					</div>
 					<div>
-						<div class="grid-item-overlay-hidden">
+						<div class="grid-item-overlay">
 							<h3>R-P-S Hand</h3>
 							<p>A mechanical hand that plays Rock-Paper-Scissors and learns to beat you</p>
 						</div>
@@ -108,10 +109,18 @@
 						STAT MECH
 					</div>
 					<div>
+						<div class="grid-item-overlay">
+							<h3>Complete-Galactic-Dominion</h3>
+							<p>An online multiplayer role-playing game</p>
+						</div>
 						SOFT DESIGN
 					</div>
 					<div>
-						SIG SYS
+						<div class="grid-item-overlay">
+							<h3>Analog Fourier Transform</h3>
+							<p>A study and simulation of a circuit that can perform an approximate Fourier transform.</p>
+						</div>
+						<img src="assets/LC-Lattice_thumb.png"/>
 					</div>
 					<div>
 						RWM (CAR AND VIDEO GAME)
