--- a/patrickvarin_2012_11_14/index.html
+++ b/patrickvarin_2012_11_14/index.html
@@ -9,6 +9,7 @@
 <script src="scripts/navigation.js" type="text/javascript"></script>
 <script src="scripts/gridItemOverlay.js" type="text/javascript"></script>
 <script src="scripts/format.js" type="text/javascript"></script>
+<script src="scripts/inputPlaceholderFix.js" type="text/javascript"></script>
 <script type="text/javascript">
 	var _gaq = _gaq || [];
 	_gaq.push(['_setAccount', 'UA-28050963-1']);
@@ -41,31 +42,28 @@
 					<span>E N G I N E E R</span>
 				</div>
 			</div>
-			<div id="home" class="content-wrapper-visible" style="overflow:hidden;">
+			<div id="home" class="content-wrapper">
 			</div>
-			<div id="about" class="content-wrapper-hidden">
+			<div id="about" class="content-wrapper">
 				<div id="content-about-wrapper">
+					<div id="headshot">
+						<img src="assets/Patrick_small.png"/>
+					</div>
+					<span>MY STORY</span>
 					<p>
 						Hi! My name is Patrick. I'm 20 years old, studying Engineering at Olin College, and having the time of my life. I built this website to share what I've been up to over the last couple years. Take a look around and let me know what you think!
 					</p>
-					<div id="headshot">
-						<img src="assets/Profile_small.png"/>
-					</div>
-					<h3>Olin College</h3>
 					<p>
-						If you haven't heard of Olin College you should look it up! For now, here's my shameless plug. Olin is a small engineering school that was built to redefine engineering education, and now it's getting international recognition as a leader in technical education.
+						If you haven't heard of Olin College, here's my shameless plug: Olin is a small engineering school that was built in order to redefine engineering education, and now it's getting international recognition as a leader in technical education.
+						
+						My major is formally <em>"Engineering with a Concentration in Controls"</em>. Basically, this means that I study techniques that are used to control complex systems. I answer questions like "How do you move the tail of a robotic fish to make it swim efficiently?" or "How do you control a fleet of autonomous boats to work together to perform a task?"
 					</p>
-					<h3>E:Controls</h3>
-					<p>
-						My major is formally "Engineering with a Concentration in Controls". In short, I study techniques that are used to control complicated systems. I answer questions like "How do you move the tail of a robotic fish  to make it swim?" or "How do you control a fleet of autonomous boats to perform a specific task?"
-					</p>
-					<h3>Hobbies</h3>
 					<p>
 						When I'm not wrapped up in one of my projects, I spend my time running around outside, climbing trees, playing soccer, or painting.
 					</p>
 				</div>
 			</div>
-			<div id="grid" class="content-wrapper-hidden">
+			<div id="grid" class="content-wrapper">
 				<div id="projects" class="content-grid-wrapper-visible">
 					<div>
 						<div class="grid-item-overlay">
@@ -90,6 +88,13 @@
 					</div>
 					<div>
 						<div class="grid-item-overlay">
+							<h3>User-Oriented Design</h3>
+							<p>A design study centered around the people who fight homelessness</p>
+						</div>
+						<!--img src="assets/Waterwave_thumb.png"/-->
+					</div>
+					<div>
+						<div class="grid-item-overlay">
 							<h3>Wave Simulation</h3>
 							<p>A study and simulation of the Shallow Water Equations</p>
 						</div>
@@ -103,17 +108,25 @@
 						<img src="assets/RPSHand_thumb.png"/>
 					</div>
 					<div>
-						U-PHYSICS COMP
+						<div class="grid-item-overlay">
+							<h3>University Physics Competition</h3>
+							<p>The first place paper in an international 24-hour physics competition</p>
+						</div>
+						<!--img src="assets/RPSHand_thumb.png"/-->
 					</div>
 					<div>
-						STAT MECH
+						<div class="grid-item-overlay">
+							<h3>Econophysics</h3>
+							<p>A study of the distrubuion of wealth using statistical mechanics.</p>
+						</div>
+						<!--img src="assets/RPSHand_thumb.png"/-->
 					</div>
 					<div>
 						<div class="grid-item-overlay">
 							<h3>Complete-Galactic-Dominion</h3>
 							<p>An online multiplayer role-playing game</p>
 						</div>
-						SOFT DESIGN
+						<!--img src="assets/RPSHand_thumb.png"/-->
 					</div>
 					<div>
 						<div class="grid-item-overlay">
@@ -136,8 +149,6 @@
 					</div>
 					<div>
 						DESIGN NATURE
-					</div>
-					<div>
 					</div>
 					<div>
 					</div>
@@ -211,31 +222,31 @@
 					</div>
 				</div>
 				<div id="content-menu-grid-wrapper">
-						<div id="projects-button" onclick="goToGrid('projects');" class="current-grid">
-							<div>
-								<span>PROJECTS</span>
-							</div>
+					<div id="projects-button" onclick="goToGrid('projects');" class="current-grid">
+						<div>
+							<span>PROJECTS</span>
 						</div>
-						<div id="research-button" onclick="goToGrid('research');">
-							<div>
-								<span>RESEARCH</span>
-							</div>
+					</div>
+					<div id="research-button" onclick="goToGrid('research');">
+						<div>
+							<span>RESEARCH</span>
 						</div>
-						<div id="art-button" onclick="goToGrid('art');">
-							<div>
-								<span>ART</span>
-							</div>
+					</div>
+					<div id="art-button" onclick="goToGrid('art');">
+						<div>
+							<span>ART</span>
 						</div>
+					</div>
 				</div>
 			</div>
-			<div id="resume" class="content-wrapper-hidden">
+			<div id="resume" class="content-wrapper">
 				<div id="resume-wrapper">
 					<p>
 						Here's a <a href="assets/Patrick_Varin_Resume.pdf">link</a> to my resume.
 					</p>
 				</div>
 			</div>
-			<div id="contact" class="content-wrapper-hidden">
+			<div id="contact" class="content-wrapper">
 				<div id="contact-form-wrapper">
 					<form action="mailto:patrick@patrickvarin.com" enctype="text/plain" method="post">
 						<input name="name" type="text" size="40" placeholder="Name">
