--- a/patrickvarin_2012_11_14/index.html
+++ b/patrickvarin_2012_11_14/index.html
@@ -23,7 +23,7 @@
 </script>
 </head>
 <body>
-	<div id="wrapper">
+	<div id="Wrapper">
 		<div id="header">
 			<ul id="navbar">
 				<a href=# onclick="goToPage('home');"><li id="home-button" class="current-tab">Home</li></a>
